--- a/index.html
+++ b/index.html
@@ -32,7 +32,17 @@
     </nav>
   </header>
   <div class="home">
-    
+    <div class="home-content">
+      <h1>
+        Если ты хочешь судьбу переспорить,
+        <br>
+        Если ты ищешь отрады цветник,
+        <br>
+        Если нуждаешься в твердой опоре,
+        <br>
+        Выучи русский язык!
+      </h1>
+    </div>
   </div>
   <div class="lessons">
     <center><h1>Уроки</h1></center>
