--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
       </ul>
       <ul>
         <li>
-          <a href="#">Главная</a>
+          <a href="./index.html">Главная</a>
         </li>
         <li>
-          <a href="#">Уроки</a>
+          <a href="./lessons.html">Уроки</a>
         </li>
         <li>
-          <a href="#">Материалы</a>
+          <a href="./materials.html">Материалы</a>
         </li>
         <li>
-          <a href="#">Задания</a>
+          <a href="./tasks.html">Задания</a>
         </li>
       </ul>
     </nav>
