--- a/lessons.html
+++ b/lessons.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Уроки</title>
+  <title>Видео уроки</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,10 +20,10 @@
           <a href="./index.html">Главная</a>
         </li>
         <li>
-          <a href="./lessons.html">Уроки</a>
+          <a href="./lessons.html">Видео уроки</a>
         </li>
         <li>
-          <a href="./materials.html">Материалы</a>
+          <a href="./materials.html">Планы уроков</a>
         </li>
         <li>
           <a href="./tasks.html">Задания</a>
@@ -34,6 +34,10 @@
   <div class="lessons">
     <h1>Урок литературы А.П.Чехов."Человек в футляре"</h1>
     <iframe width="460" height="315" src="https://www.youtube.com/embed/WoB39XY_PPs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  </div>
+  <div class="lessons">
+    <h1>Выразительное чтение ученицы 11класса К.Симонов "Жди меня"</h1>
+    <iframe width="460" height="315" src="https://www.youtube.com/embed/HQt-1XcVbdI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </div>
 </body>
 </html>
