--- a/tasks.html
+++ b/tasks.html
@@ -23,10 +23,10 @@
             <a href="./index.html">Главная</a>
           </li>
           <li>
-            <a href="./lessons.html">Уроки</a>
+            <a href="./lessons.html">Видео уроки</a>
           </li>
           <li>
-            <a href="./materials.html">Материалы</a>
+            <a href="./materials.html">Планы уроков</a>
           </li>
           <li>
             <a href="./tasks.html">Задания</a>
