--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
           <a href="./index.html">Главная</a>
         </li>
         <li>
-          <a href="./lessons.html">Уроки</a>
+          <a href="./lessons.html">Видео уроки</a>
         </li>
         <li>
-          <a href="./materials.html">Материалы</a>
+          <a href="./materials.html">Планы уроков</a>
         </li>
         <li>
           <a href="./tasks.html">Задания</a>
@@ -51,34 +51,34 @@
         <div class="nav-left">
           <ul>
             <li>
-              <a href="#">Главная</a>
+              <a href="./index.html">Главная</a>
             </li>
             <li>
-              <a href="#">Уроки</a>
+              <a href="./lessons.html">Видео уроки</a>
             </li>
             <li>
-              <a href="#">Материалы</a>
+              <a href="./materials.html">Планы уроков</a>
             </li>
             <li>
-              <a href="#">Задания</a>
+              <a href="./tasks.html">Задания</a>
             </li>
           </ul>
         </div>
       </div>
       <div class="lessons-box">
-        <a href="#" class="lessons-list">
+        <a href="./lessons.html" class="lessons-list">
           <img src="./img/book.png" alt="">
           <span class="lesson-desk">
             <span class="lesson-link">
-              Урок первый
+              Урок литературы А.П.Чехов."Человек в футляре"
             </span>
           </span>
         </a>
-        <a href="#" class="lessons-list">
+        <a href="./lessons.html" class="lessons-list">
           <img src="./img/book.png" alt="">
           <span class="lesson-desk">
             <span class="lesson-link">
-              Урок первый
+              Выразительное чтение ученицы 11класса К.Симонов "Жди меня"
             </span>
           </span>
         </a>
