--- a/materials.html
+++ b/materials.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Материалы</title>
+  <title>Планы уроков</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,10 +20,10 @@
           <a href="./index.html">Главная</a>
         </li>
         <li>
-          <a href="./lessons.html">Уроки</a>
+          <a href="./lessons.html">Видео уроки</a>
         </li>
         <li>
-          <a href="./materials.html">Материалы</a>
+          <a href="./materials.html">Планы уроков</a>
         </li>
         <li>
           <a href="./tasks.html">Задания</a>
